[project]
name = "data-analyst-agent"
version = "0.1.0"
description = "Multi-agent restaurant review analyst: Collect → EDA → Hypothesize"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.40.0",
    "anthropic>=0.40.0",
    "google-adk>=1.0.0",
    "datasets>=3.0.0",
    "pandas>=2.2.0",
    "vaderSentiment>=3.3.2",
    "plotly>=5.24.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
